syntax = "proto3";

package services;

import "google/api/annotations.proto";
//import "api/models/price.proto";

option go_package = "github.com/foxcool/greedy-eye/internal/api/services";

// PriceService handles fetching, processing, and potentially analyzing price data.
// See storage_service.proto for details on how prices are stored.
service PriceService {
  // Triggers fetching of latest prices from configured external sources and stores them using StorageService.
  rpc FetchExternalPrices(FetchExternalPricesRequest) returns (FetchExternalPricesResponse) {
    option (google.api.http) = {
      post: "/api/v1/prices/fetch-external"
      body: "*"
    };
  }

  // Analyzes stored price data to find potential arbitrage opportunities (example).
  // rpc FindArbitrageOpportunities(FindArbitrageOpportunitiesRequest) returns (ArbitrageOpportunitiesResponse);
}

message FetchExternalPricesRequest {
  repeated string source_ids = 1; // Optional: Fetch only from specific sources (e.g., ["coingecko", "binance"])
  repeated string asset_ids = 2; // Optional: Fetch only for specific assets
}

message FetchExternalPricesResponse {
  int32 prices_fetched = 1;
  int32 prices_stored = 2;
  repeated string errors = 3; // List of errors encountered during fetching/storing
}
