syntax = "proto3";

package services;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "api/models/account.proto";
import "api/models/asset.proto";
import "api/models/holding.proto";
import "api/models/portfolio.proto";
import "api/models/price.proto";
import "api/models/transaction.proto";
import "api/models/user.proto";

option go_package = "github.com/foxcool/greedy-eye/internal/api/services";

// StorageService provides low-level CRUD operations for all core entities.
// It acts as an abstraction layer over the database.
service StorageService {
  // --- Asset operations ---
  rpc CreateAsset(CreateAssetRequest) returns (models.Asset);
  rpc GetAsset(GetAssetRequest) returns (models.Asset);
  rpc UpdateAsset(UpdateAssetRequest) returns (models.Asset);
  rpc DeleteAsset(DeleteAssetRequest) returns (google.protobuf.Empty);
  rpc ListAssets(ListAssetsRequest) returns (ListAssetsResponse);

  // --- Price operations ---
  // Assuming prices are immutable once created, so no UpdatePrice.
  rpc CreatePrice(CreatePriceRequest) returns (models.Price);
  rpc CreatePrices(CreatePricesRequest) returns (CreatePricesResponse); // Bulk create
  rpc GetLatestPrice(GetLatestPriceRequest) returns (models.Price); // Gets the most recent price matching criteria
  rpc ListPriceHistory(ListPriceHistoryRequest) returns (ListPriceHistoryResponse); // Gets prices in a time range
  rpc ListPricesByInterval(ListPricesByIntervalRequest) returns (ListPriceHistoryResponse); // Aggregated prices (e.g., daily OHLC) - Implementation detail TBD
  rpc DeletePrice(DeletePriceRequest) returns (google.protobuf.Empty); // For admin/cleanup
  rpc DeletePrices(DeletePricesRequest) returns (google.protobuf.Empty); // Bulk delete by criteria

  // --- Portfolio operations ---
  rpc CreatePortfolio(CreatePortfolioRequest) returns (models.Portfolio);
  rpc GetPortfolio(GetPortfolioRequest) returns (models.Portfolio);
  rpc UpdatePortfolio(UpdatePortfolioRequest) returns (models.Portfolio);
  rpc DeletePortfolio(DeletePortfolioRequest) returns (google.protobuf.Empty);
  rpc ListPortfolios(ListPortfoliosRequest) returns (ListPortfoliosResponse);

  // --- Holdings operations ---
  rpc CreateHolding(CreateHoldingRequest) returns (models.Holding);
  rpc GetHolding(GetHoldingRequest) returns (models.Holding);
  rpc UpdateHolding(UpdateHoldingRequest) returns (models.Holding);
  rpc ListHoldings(ListHoldingsRequest) returns (ListHoldingsResponse);

  // --- User operations ---
  rpc CreateUser(CreateUserRequest) returns (models.User);
  rpc GetUser(GetUserRequest) returns (models.User);
  rpc UpdateUser(UpdateUserRequest) returns (models.User);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);

  // --- Account operations ---
  rpc CreateAccount(CreateAccountRequest) returns (models.Account);
  rpc GetAccount(GetAccountRequest) returns (models.Account);
  rpc UpdateAccount(UpdateAccountRequest) returns (models.Account);
  rpc DeleteAccount(DeleteAccountRequest) returns (google.protobuf.Empty);
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse);

  // --- Transaction operations ---
  rpc CreateTransaction(CreateTransactionRequest) returns (models.Transaction);
  rpc GetTransaction(GetTransactionRequest) returns (models.Transaction);
  rpc UpdateTransaction(UpdateTransactionRequest) returns (models.Transaction);
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
}

// --- Asset Messages ---
message CreateAssetRequest {
  models.Asset asset = 1; // ID might be empty if generated server-side
}
message GetAssetRequest {
  string id = 1;
}
message UpdateAssetRequest {
  models.Asset asset = 1; // Must include ID and fields to update
  google.protobuf.FieldMask update_mask = 2; // Specifies which fields to update
}
message DeleteAssetRequest {
  string id = 1;
}
message ListAssetsRequest {
  optional int32 page_size = 1; // Number of assets to return
  optional string page_token = 2; // Token for fetching the next page
  repeated string tags = 3; // Filter by tags
}
message ListAssetsResponse {
  repeated models.Asset assets = 1;
  string next_page_token = 2; // Token for the next page, empty if no more pages
}

// --- Price Messages ---
message CreatePriceRequest {
  models.Price price = 1;
}
message CreatePricesRequest {
  repeated models.Price prices = 1;
}
message CreatePricesResponse {
  int32 created_count = 1; // Number of prices successfully created
}
message GetLatestPriceRequest {
  string asset_id = 1;
  string base_asset_id = 2;
  optional string source_id = 3;
}
message ListPriceHistoryRequest {
  string asset_id = 1;
  string base_asset_id = 2;
  optional google.protobuf.Timestamp from = 3; // Start of the time range
  optional google.protobuf.Timestamp to = 4; // End of the time range
  optional string source_id = 5; // Filter by source
  optional int32 page_size = 6; // Pagination for large history
  optional string page_token = 7;
}
message ListPriceHistoryResponse {
  repeated models.Price prices = 1;
  string next_page_token = 2;
}
message ListPricesByIntervalRequest {
  string asset_id = 1;
  string base_asset_id = 2;
  optional google.protobuf.Timestamp from = 3;
  optional google.protobuf.Timestamp to = 4;
  string interval = 5; // e.g., "hourly", "daily", "weekly" - specific values TBD
  optional string source_id = 6; // Filter by source
  optional int32 page_size = 7; // Pagination
  optional string page_token = 8;
}
message DeletePriceRequest {
    string id = 1;
}
message DeletePricesRequest {
    optional string asset_id = 1;
    optional string base_asset_id = 2;
    optional google.protobuf.Timestamp from = 3;
    optional google.protobuf.Timestamp to = 4;
    optional string source_id = 5; // Filter by source
}

// --- Portfolio Messages ---
message CreatePortfolioRequest {
  models.Portfolio portfolio = 1; // user_id and name are required. ID empty if server-generated.
}
message GetPortfolioRequest {
  string id = 1;
}
message UpdatePortfolioRequest {
  models.Portfolio portfolio = 1; // Must include ID and fields to update
  google.protobuf.FieldMask update_mask = 2;
}
message DeletePortfolioRequest {
  string id = 1;
}
message ListPortfoliosRequest {
  optional string user_id = 1;
  optional int32 page_size = 2;
  optional string page_token = 3;
}
message ListPortfoliosResponse {
  repeated models.Portfolio portfolios = 1;
  string next_page_token = 2;
}

// --- Holding Messages ---
message CreateHoldingRequest {
  models.Holding holding = 1; // asset_id, amount, decimals required. One of portfolio_id or account_id required. ID empty.
}
message GetHoldingRequest {
  string id = 1;
}
message UpdateHoldingRequest {
  models.Holding holding = 1; // Must include ID and fields to update (e.g., amount)
  google.protobuf.FieldMask update_mask = 2;
}
message ListHoldingsRequest {
  optional string portfolio_id = 1;
  optional string account_id = 2;
  optional string asset_id = 3;
  optional int32 page_size = 4;
  optional string page_token = 5;
}
message ListHoldingsResponse {
  repeated models.Holding holdings = 1;
  string next_page_token = 2;
}

// --- User Messages ---
message CreateUserRequest {
  models.User user = 1; // email, name required. ID empty.
}
message GetUserRequest {
  string id = 1;
}
message UpdateUserRequest {
  models.User user = 1; // Must include ID and fields to update
  google.protobuf.FieldMask update_mask = 2;
}
message DeleteUserRequest {
  string id = 1;
}

// --- Account Messages ---
message CreateAccountRequest {
  models.Account account = 1; // user_id, name, type required. ID empty.
}
message GetAccountRequest {
  string id = 1;
}
message UpdateAccountRequest {
  models.Account account = 1; // Must include ID and fields to update
  google.protobuf.FieldMask update_mask = 2;
}
message DeleteAccountRequest {
  string id = 1;
}
message ListAccountsRequest {
  optional string user_id = 1; // Filter by user
  optional models.AccountType type = 2; // Filter by AccountType
  optional int32 page_size = 3;
  optional string page_token = 4;
}
message ListAccountsResponse {
  repeated models.Account accounts = 1;
  string next_page_token = 2;
}

// --- Transaction Messages ---
message CreateTransactionRequest {
  models.Transaction transaction = 1; // Required fields depend on type. ID empty.
}
message GetTransactionRequest {
  string id = 1;
}
message UpdateTransactionRequest {
  models.Transaction transaction = 1; // Must include ID. Typically only 'status' or 'metadata' can be updated.
  google.protobuf.FieldMask update_mask = 2;
}
// message DeleteTransactionRequest { string id = 1; }
message ListTransactionsRequest {
  optional models.TransactionType type = 1;
  optional models.TransactionStatus status = 2;
  optional string account_id = 3;
  optional google.protobuf.Timestamp from = 4;
  optional google.protobuf.Timestamp to = 5;
  optional int32 page_size = 6;
  optional string page_token = 7;
}
message ListTransactionsResponse {
  repeated models.Transaction transactions = 1;
  string next_page_token = 2;
}
